Fix sizes in Tips Panel and add Shift + 4 tip

--- a/src/components/Editor/css/TipsPanel.css
+++ b/src/components/Editor/css/TipsPanel.css
@@ -49,36 +49,50 @@
 
 .key-tip img {
   position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 30%;
-  left: 30%;
+  width: 30px;
+  height: 30px;
+  top: 50%;
+  left: 60%;
 }
 
 .key-tip.double img {
-  width: 70%;
-  height: 70%;
-  top: 42%;
-  left: 45%;
+  left: 60%;
 }
 
 .key-tip.double img:nth-of-type(1) {
-  left: 15%;
+  left: 25%;
 }
 
 .key-tip.triplet img {
-  width: 60%;
-  height: 60%;
+  width: 25px;
   top: 45%;
-  left: 55%;
+  left: 72%;
 }
 
 .key-tip.triplet img:nth-of-type(1) {
-  left: 5%;
+  left: 8%;
 }
 
 .key-tip.triplet img:nth-of-type(2) {
-  left: 30%;
+  left: 40%;
+}
+
+.key-tip.quartet img {
+  width: 20px;
+  top: 45%;
+  left: 0;
+}
+
+.key-tip.quartet img:nth-of-type(2) {
+  left: 25%;
+}
+
+.key-tip.quartet img:nth-of-type(3) {
+  left: 50%;
+}
+
+.key-tip.quartet img:nth-of-type(4) {
+  left: 75%;
 }
 
 .key-tip p {
